@@ -892,3 +892,4 @@
 20040602 snapshot.c,zxatasp.[ch]: save/restore ZXATASP state.
 20040602 menu_data.c: use proper C comment rather than #if 0/#endif.
 20040602 widget/{menu.c,widget.[ch]}: make Options/Peripherals work.
+20040603 snapshot.c: refactor snapshot_copy_to into multiple functions.
